# bitcraft-hub

./: .dockerignore  .gitignore  .nuxtignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  app.vue  biome.json  bun.lockb  justfile  nuxt.config.ts  package-lock.json  package.json  schema.json  types.ts
rust/api-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
rust/api-server/.cargo/: config.toml
rust/api-server/api/: Cargo.toml
rust/api-server/api/benches/: leaderboard_get_rank.rs
rust/api-server/api/src/: config.rs  download.rs  lib.rs  websocket.rs
rust/api-server/api/src/auction_listing_state/: bitcraft.rs  mod.rs
rust/api-server/api/src/buildings/: bitcraft.rs  mod.rs
rust/api-server/api/src/cargo_desc/: bitcraft.rs  mod.rs
rust/api-server/api/src/claim_tech_desc/: mod.rs
rust/api-server/api/src/claim_tech_state/: mod.rs
rust/api-server/api/src/claims/: bitcraft.rs  claim_local_state.rs  claim_member_state.rs  claim_state.rs  mod.rs
rust/api-server/api/src/collectible_desc/: bitcraft.rs  mod.rs
rust/api-server/api/src/crafting/: bitcraft.rs  mod.rs
rust/api-server/api/src/crafting_recipe_desc/: bitcraft.rs
rust/api-server/api/src/deployable_desc/: mod.rs
rust/api-server/api/src/deployable_state/: bitcraft.rs  mod.rs
rust/api-server/api/src/extraction_recipe_desc/: bitcraft.rs  mod.rs
rust/api-server/api/src/houses/: bitcraft.rs  mod.rs
rust/api-server/api/src/inventory/: bitcraft.rs  mod.rs
rust/api-server/api/src/item_list_desc/: bitcraft.rs
rust/api-server/api/src/items/: bitcraft.rs  mod.rs
rust/api-server/api/src/itemsAndCargo/: mod.rs
rust/api-server/api/src/items_and_cargo/: mod.rs
rust/api-server/api/src/leaderboard/: bitcraft.rs  mod.rs
rust/api-server/api/src/location_state/: bitcraft.rs
rust/api-server/api/src/locations/: mod.rs
rust/api-server/api/src/mobile_entity_state/: bitcraft.rs
rust/api-server/api/src/module_bindings/: achievement_claim_reducer.rs  achievement_desc_type.rs  acquire_knowledge_from_entities_reducer.rs  action_state_table.rs  active_buff_state_type.rs  active_buff_type.rs  admin_alpha_3_reset_onboarding_to_first_expand_quest_reducer.rs  admin_alpha_3_reset_onboarding_to_second_expand_quest_reducer.rs  admin_broadcast_type.rs  admin_restore_player_state_reducer.rs  admin_restore_player_state_timer_type.rs  admin_update_light_source_states_reducer.rs  alert_desc_type.rs  alert_state_type.rs  alert_type_type.rs  attached_herds_state_table.rs  attack_impact_reducer.rs  attack_outcome_state_table.rs  auto_claim_state_type.rs  auto_logout_loop_timer_type.rs  barter_stall_order_accept_reducer.rs  barter_stall_order_delete_reducer.rs  barter_stall_set_market_mode_enabled_reducer.rs  barter_stall_state_table.rs  barter_stall_state_type.rs  biome_desc_table.rs  buff_category_type.rs  buff_type_desc_type.rs  building_deconstruct_reducer.rs  building_deconstruct_start_reducer.rs  building_desc_table.rs  building_desc_type.rs  building_despawn_reducer.rs  (+557 more)
rust/api-server/config/: config.toml
rust/api-server/entity/: Cargo.toml
rust/api-server/entity/src/: action_state.rs  auction_listing_state.rs  building_desc.rs  building_nickname_state.rs  building_state.rs  cargo_desc.rs  cargo_description.rs  cargo_state.rs  claim_description.rs  claim_description_state.rs  claim_local_state.rs  claim_member_state.rs  claim_state.rs  claim_tech_desc.rs  claim_tech_state.rs  claim_tile_state.rs  collectible_desc.rs  crafting_recipe.rs  crafting_recipe_desc.rs  deployable_desc.rs  deployable_state.rs  dimension_description_state.rs  equipment.rs  experience_state.rs  extraction_recipe_desc.rs  interior_network_desc.rs  inventory.rs  inventory_changelog.rs  item.rs  item_desc.rs  item_list_desc.rs  lib.rs  location.rs  location_state.rs  mobile_entity_state.rs  npc_desc.rs  permission_state.rs  player_action_state.rs  player_housing_state.rs  player_state.rs  (+16 more)
rust/api-server/game_module/: Cargo.toml
rust/api-server/game_module/src/: lib.rs
rust/api-server/migration/: Cargo.toml
rust/api-server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_player_state.rs  m20240727_170250_claim_tech.rs  m20240727_170250_skill_desc.rs  m20240728_160123_vehicle_state.rs  m20240801_163734_changes_experience_state.rs  m20240822_150555_fix_remaining_stock_type.rs  m20241201_181644_fix_typo_for_player_state.rs  m20241203_212013_vault_state.rs  m20241204_132147_collectible_desc.rs  m20241208_112015_inventory_changelog.rs  m20241208_205237_raw_event_data.rs  m20241210_182840_raw_event_data_user_id.rs  m20250219_215440_add_to_item_desc_convert_to_on_durability_zero.rs  m20250219_221732_add_to_building_desc_interact_permission.rs  m20250220_115114_add_crafting_recipe.rs  m20250221_122758_add_new_fields_to_collectible_desc.rs  m20250221_220058_player_to_claim.rs  m20250317_184148_remove_interaction_level_from_building_desc.rs  m20250427_141500_small_changes_for_beta.rs  m20250601_141123_fix_type_claim_tech_state_scheduled_id.rs  m20250602_132531_add_tool_durability_lost_to_crafting_recipe.rs  m20250602_184227_building_nickname_state.rs  m20250604_111111_terrain_chunk_state.rs  m20250605_111309_fix_crafting_recipe.rs  m20250612_121707_redo_inventory_changelog.rs  m20250617_140552_treveler_tasks.rs  m20250619_134107_deployable_desc.rs  m20250622_112143_correct_item_cargo_desc_id_type.rs  m20250718_234013_set_correct_cargo_desc_type.rs  m20250721_155813_add_region_to_state_data.rs  m20250816_092123_inventory_changelog_hypetable.rs  m20250816_105212_inventory_changelog_hypetable_compression.rs  m20250819_160231_add_two_now_field_to_collectible_desc.rs  m20260211_000001_create_interior_network_desc.rs  m20260211_000002_create_dimension_description_state.rs  m20260211_000003_create_player_housing_state.rs  m20260211_000004_create_permission_state.rs  m20260212_000001_create_portal_state.rs  (+13 more)
rust/api-server/service/: Cargo.toml
rust/api-server/service/src/: mutation.rs  query.rs
rust/api-server/src/: main.rs
rust/program-generator/: Cargo.toml
rust/program-generator/src/: config.rs  main.rs
(+2516 files in other folders)
