[package]
name = "bitcraft-hub-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

#[profile.release]
#opt-level = 3
#lto = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [".", "api", "service", "entity", "migration", "game_module"]

[workspace.dependencies]
sea-orm = { version = "=1.1.19", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-time" ] }
sea-orm-cli = "1.1.19"
sea-orm-migration = "1.1.19"
serde_json = "1.0.149"
serde_yml = "0.0.12"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = [ "full" ] }
log = "0.4.29"
axum = { version = "0.8.8", features = ["ws"]}
hyper = { version = "1.8.1", features = ["full"] }
rayon = "1.11.0"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
axum-codec = { version = "0.0.20", features = ["serde", "json", "msgpack", "toml", "yaml"] }
spacetimedb-sdk = "1.11.3"
ts-rs = "11.1.0"
chrono = "0.4.43"


[dependencies]
api = { path = "api" }
tokio = { version = "1.49.0", features = [ "full" ] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"
