[package]
name = "api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
hyper = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dashmap = { version = "6.1.0", features = ["serde"] }
tokio-util = "0.7.13"
futures = "0.3.31"
tower = "0.5.2"
service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
tower-http = { version = "0.6.2", features = ["fs", "cors", "compression-full"] }
tower-cookies = "0.11.0"
dotenvy = "0.15.7"
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
struson = { version = "0.6.0", features = ["serde"] }
reqwest-websocket = {  version = "0.4.4" }
base64 = "0.22.1"
tungstenite = "0.24.0"
async-compression = { version = "0.4.18", features = ["tokio", "deflate", "zstd"] }
tracing = "0.1.41"
nanoid = "0.4.0"
config = "0.15.8"

[dependencies.sea-orm-cli]
version = "1.1.5"
