[package]
name = "api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
sea-orm = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
hyper = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
axum-codec = { workspace = true }
spacetimedb-sdk = { workspace = true }
ts-rs = { workspace = true }
dashmap = { version = "6.1.0", features = ["serde"] }
tokio-util = "0.7.18"
futures = "0.3.32"
tower = "0.5.3"
service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }
game_module = { path = "../game_module" }
tracing-subscriber = { version = "0.3.22", features = ["json", "serde", "serde_json"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "compression-full"] }
tower-cookies = "0.11.0"
dotenvy = "0.15.7"
metrics = { version = "0.24.3", default-features = false }
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
tracing = "0.1.44"
nanoid = "0.4.0"
config = "0.15.19"
kanal = "0.1.1"
prometheus = "0.13.4"
metrics-process = "2.4.3"
chrono =  { workspace = true }
sea-orm-cli =  { workspace = true }
crossbeam-skiplist = { version = "0.1.3" }