[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.0"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum-codec = { workspace = true }
time = { workspace = true }
