[package]
name = "entity"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.0"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
spacetimedb-sdk = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum-codec = { workspace = true }
time = { workspace = true }
ts-rs = { workspace = true }
game_module = { path = "../game_module" }
