[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
futures-core = "0.3.31"
log = "0.4.22"

[dependencies.sea-orm]
workspace = true
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = { version = "1.39.1", features = ["macros", "rt"] }

#[features]
#mock = ["sea-orm/mock"]
#
#[[test]]
#name = "mock"
#required-features = ["mock"]