[package]
name = "service"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
chrono =  { workspace = true }
entity = { path = "../entity" }

[dependencies.sea-orm]
workspace = true
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
